# Trigonometric_approx_embedded

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  cos_sin.c  cos_sin.h  globals.h
src_test/: CMakeLists.txt  simple_test.c
